# toy-lsp

./: Cargo.toml  test.md
src/: logger.rs  main.rs
src/lsp/: did_change.rs  did_open.rs  hover.rs  initialize.rs  mod.rs  state.rs
src/rpc/: errors.rs  message_codec.rs  mod.rs  tests.rs
