[package]
name = "toy-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memchr = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = {version = "0.7.15", features = ["codec"]}
tokio-stream = "0.1.17"
simplelog   = "0.12"
log = "0.4.27"
